--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,6 @@ blinker==1.9.0
 click==8.1.7
 colorama==0.4.6
 Flask==3.1.0
-Flask-JWT==0.3.2
 Flask-JWT-Extended==4.7.1
 Flask-Migrate==4.0.7
 Flask-RESTful==0.3.10
@@ -15,6 +14,7 @@ Jinja2==3.1.4
 Mako==1.3.7
 MarkupSafe==3.0.2
 mysqlclient==2.2.6
+PyJWT==2.10.1
 pytz==2024.2
 six==1.16.0
 SQLAlchemy==2.0.36
